--- a/rideshare/templates/base.html
+++ b/rideshare/templates/base.html
@@ -4,23 +4,55 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>GoLong! {% block title %}{% endblock title %}</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+      	<script src= "http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+      	<script src= "http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     {% block script %}
     {% endblock script %}
+{% block css %}
+{% endblock css %}
 </head>
-<body>
+<body style="background-color: lightgray">
 
+<nav class="navbar navbar-default" role="navigation">
+
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="{% url "home" %}">GoLong!</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        {% if user.is_authenticated %}
+          <li><a href="{% url 'profile' %}">{{ user.username }}</a></li>
+        <li><a href="{% url 'car_form' %}">Add a Car</a></li>
+        <li><a href="{% url 'route_form' %}">Add a Route</a></li>
+          {% endif %}
+      </ul>
+    <ul class="nav navbar-nav navbar-right">
+        {% if user.is_authenticated %}
+        <li><a href="{% url 'logout' %}">Logout</a></li>
+        {% else %}
+        <li><a href="{% url 'login' %}">Login</a></li>
+        <li><a href="{% url 'register' %}">Register</a></li>
+        {% endif %}
+    </ul>
+    </div><!-- /.navbar-collapse -->
+</nav>
 <div>
-<span style="float:right;">
-    <a href="{% url 'home' %}">Home</a> |
-    {% if user.is_authenticated %}
-       <a href="{% url 'profile' %}">{{ user.username }}</a> | <a href="{% url 'logout' %}">Logout</a> | <a href="{% url 'car_form' %}">Add a Car</a> | <a href="{% url 'route_form' %}">Add a Route</a>
-    {% else %}
-        <a href="{% url 'login' %}">Login</a> | <a href="{% url 'register' %}">Register</a>
-    {% endif %}
-</span>
 
 </div>
+
 {% block content %}
 {% endblock content %}
+
 </body>
 </html>
