--- a/rideshare/templates/home.html
+++ b/rideshare/templates/home.html
@@ -1,11 +1,41 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 {% block title %}Home{% endblock title %}
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
+{% endblock css %}
 {% block content %}
-<h1>Welcome to GoLong! The long-distance ridesharing marketplace</h1>
-<h2>Available routes:</h2>
-<ol>{% for route in routes %}
-    <li><a href="{% url "view_route" route.id %}"> {{ route.trip_name }}</a>, From: {{ route.start_city_state }} To: {{ route.end_city_state }} Driver: <a href=" {% url "view_traveler" route.trip_driver.id %}">{{ route.trip_driver }}</a></li>
 
-{% endfor %}</ol>
+    <div class="jumbotron">
+    <h1 class="jumbo-title">Welcome to GoLong!</h1>
+    <h2 class="jumbo-title">The long-distance ridesharing marketplace</h2>
+</div>
+<div class="container-fluid">
+    <h2>Available routes:</h2>
+<div class="input-group"> <span class="input-group-addon">Filter</span>
 
+    <input id="filter" type="text" class="form-control" placeholder="Type here...">
+</div>
+               <table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Origin</th>
+            <th>Destination</th>
+            <th>Driver</th>
+        </tr>
+    </thead>
+    <tbody class="searchable">
+
+{% for route in routes %}
+        <tr>
+            <td><a href="{% url 'view_route' route.id %}"> {{ route.trip_name }}</a></td>
+            <td>{{ route.start_city_state }}</td>
+            <td>{{ route.end_city_state }}</td>
+            <td><a href=" {% url "view_traveler" route.trip_driver.id %}">{{ route.trip_driver }}</a></td>
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
+</div>
 {% endblock content %}
