--- a/rideshare/templates/view_car.html
+++ b/rideshare/templates/view_car.html
@@ -5,9 +5,8 @@
 {% block content %}
 <h1>{{ car.car_name }}</h1>
 <img width= "200px" src="{{ car.car_image.url }}">
-<h2>{{ car.car_model }}</h2>
-<h2>{{ car.car_year }}</h2>
-<h2>{{ car.seats }}</h2>
+<h2>Model: {{ car.car_model }}</h2>
+<h2>Year: {{ car.car_year }}</h2>
 <a href=" {% url "edit_car" car.id %} ">Edit {{ car.car_name }}</a>
 <a href=" {% url "delete_car" car.id %} ">Delete {{ car.car_name }}</a>
 
