--- a/rideshare/templates/view_route.html
+++ b/rideshare/templates/view_route.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 {% block title %}
     View {{ route.trip_name }}
 {% endblock title %}
@@ -11,19 +12,39 @@
 
 
 {% endblock script %}
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/profile.css' %}">
+{% endblock css %}
 {% block content %}
+    <div class="container">
+    <div class="container">
+
 <h1>Trip Name: {{ route.trip_name }}</h1>
-<h2>Trip Driver: {{ route.trip_driver }}</h2>
-<h2>Starting Trip In: {{ route.start_city_state }}</h2>
-<h2>Ending Trip In: {{ route.end_city_state }}</h2>
-<h2>Car: <a href="{% url "view_car" route.trip_car.id %}"> {{ route.trip_car }}</a></h2>
-{% for passenger in route.passenger.all %}
-    <h2>Taking <a href="{% url "view_traveler" passenger.id %}"> {{ passenger }}</a> along!</h2>
-    {% endfor %}
-   <div style="width: 600px;">
-     <div id="map" style="width: 280px; height: 400px; float: left;"></div>
-     <div id="panel" style="width: 300px; float: right;"></div>
-   </div>
+        <br>
+               <table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Origin</th>
+            <th>Destination</th>
+            <th>Driver</th>
+        </tr>
+    </thead>
+    <tbody class="searchable">
+        <tr>
+            <td><a href="{% url 'view_route' route.id %}"> {{ route.trip_name }}</a></td>
+            <td>{{ route.start_city_state }}</td>
+            <td>{{ route.end_city_state }}</td>
+            <td><a href=" {% url "view_traveler" route.trip_driver.id %}">{{ route.trip_driver }}</a></td>
+        </tr>
+    </tbody>
+</table>
+</div>
+    <br>
+    <br>
+
+   <div class = "map" style="width: 800px;">
+     <div id="map" style="width: 80%; height: 400px; float: left;"></div>
 
    <script type="text/javascript">
 
@@ -36,7 +57,6 @@
      });
 
      directionsDisplay.setMap(map);
-{#     directionsDisplay.setPanel(document.getElementById('panel'));#}
 
      var request = {
        origin: '{{ route.start_city_state }}',
@@ -50,36 +70,9 @@
        }
      });
    </script>
-{#        <div id="map" style="width: 500px; height: 400px;">#}
-{##}
-{#  <script type="text/javascript">#}
-{##}
-{#    var map = new google.maps.Map(document.getElementById('map'), {#}
-{#      zoom: 6,#}
-{#      center: new google.maps.LatLng({{ route.start_latitude }}, {{ route.start_longitude }}),#}
-{#      mapTypeId: google.maps.MapTypeId.ROADMAP#}
-{#    });#}
-{##}
-{#    var infowindow = new google.maps.InfoWindow();#}
-{##}
-{#    var marker, i;#}
-{##}
-{#    for (i = 0; i < locations.length; i++) {#}
-{#      marker = new google.maps.Marker({#}
-{#        position: new google.maps.LatLng(locations[i][1], locations[i][2]),#}
-{#        map: map#}
-{#      });#}
-{##}
-{#      google.maps.event.addListener(marker, 'click', (function(marker, i) {#}
-{#        return function() {#}
-{#          infowindow.setContent(locations[i][0]);#}
-{#          infowindow.open(map, marker);#}
-{#        }#}
-{#      })(marker, i));#}
-{#    }#}
-{#  </script></div>#}
-{% if route.trip_driver == viewer %}
-<a href=" {% url "edit_route" route.id %} ">Edit {{ route.trip_name }}</a>
-<a href=" {% url "delete_route" route.id %} ">Delete {{ route.trip_name }}</a>
-{% endif %}
+
+</div>
+    </div>
+    <br>
+    <br>
 {% endblock content %}
