--- a/rideshare/static/css/profile.css
+++ b/rideshare/static/css/profile.css
@@ -2,7 +2,7 @@ h1 {
     text-align: center
 }
 .btn {
-    background-color: dodgerblue;
+    background-color: #000000;
     border: orangered;
     margin: 10px;
 }
