--- a/rideshare/templates/route_form.html
+++ b/rideshare/templates/route_form.html
@@ -3,11 +3,13 @@
     Add a Route
 {% endblock title %}
 {% block content %}
+    <div class="container">
     <h1>Add a Route</h1>
     <form method="post">
         {% csrf_token %}
 
-    {{ route_form }}
+    {{ route_form.as_p }}
         <input type="submit" value="Add Route">
     </form>
+</div>
 {% endblock content %}
