--- a/rideshare/templates/car_form.html
+++ b/rideshare/templates/car_form.html
@@ -3,7 +3,7 @@
     Add a Car
 {% endblock title %}
 {% block content %}
-    <div class="container-fluid">
+    <div class="container">
     <h1>Add a Car</h1>
     <form method="post" action="." enctype="multipart/form-data">
         {% csrf_token %}
