--- a/rideshare/templates/route_form.html
+++ b/rideshare/templates/route_form.html
@@ -8,8 +8,9 @@
     <form method="post">
         {% csrf_token %}
 
-    {{ route_form.as_p }}
-        <input type="submit" value="Add Route">
+      {{ route_form.as_p }}
+    <button class= "btn btn-primary" type="submit" value="Add Route">Add Route</button>
+
     </form>
 </div>
 {% endblock content %}
