--- a/rideshare/templates/route_form.html
+++ b/rideshare/templates/route_form.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 {% block title %}
     Add a Route
 {% endblock title %}
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/route_form.css' %}">
+{% endblock css %}
 {% block content %}
     <div class="container">
     <h1>Add a Route</h1>
