--- a/rideshare/templates/registration/logged_out.html
+++ b/rideshare/templates/registration/logged_out.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <p>Come back soon!</p>
+    <div class="container">
+    <h1>Come back soon!</h1>
+    </div>
 {% endblock %}
