--- a/rideshare/templates/registration/register.html
+++ b/rideshare/templates/registration/register.html
@@ -1,14 +1,20 @@
 {% extends "base.html" %}
+{% load staticfiles %}
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/register.css' %}">
+{% endblock css %}
 {{% block title %}
 Register
 {% endblock title %}
 {% block content %}
 <h1>Register for GoLong</h1>
+    <div class="container">
     <form method="post" action="." enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
 
-        <input type="submit" value="Submit">
+                <button class= "btn btn-primary" type="submit" value="Submit">Submit</button>
     </form>
+    </div>
 
 {% endblock %}
