--- a/rideshare/templates/registration/password_reset_complete.html
+++ b/rideshare/templates/registration/password_reset_complete.html
@@ -3,6 +3,8 @@
 Password Reset Complete
 {% endblock title %}
 {% block content %}
+    <div class="container">
     <p>Password reset successfully</p>
     <p><a href="{% url 'login' %}">Log in</a></p>
+    </div>
 {% endblock %}
