--- a/rideshare/templates/registration/password_reset_confirm.html
+++ b/rideshare/templates/registration/password_reset_confirm.html
@@ -2,16 +2,24 @@
 {% block title %}
 Password Reset Confirm
 {% endblock title %}
+{% load staticfiles %}
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/register.css' %}">
+{% endblock css %}
 <h1>Password Reset Confirmation</h1>
 {% block content %}
+    <div class="container">
     {% if validlink %}
         <form method="post" action=".">
             {% csrf_token %}
             {{ form.as_p }}
 
-            <input type="submit" value="Submit">
+
+            <button class= "btn btn-primary" type="submit" value="Submit">Submit</button>
+
         </form>
     {% else %}
         <p>Password reset failed</p>
     {% endif %}
+    </div>
 {% endblock %}
