--- a/rideshare/templates/registration/password_reset_form.html
+++ b/rideshare/templates/registration/password_reset_form.html
@@ -3,11 +3,13 @@
 Password Reset Form
 {% endblock title %}
 {% block content %}
+    <div class="container">
     <h1>Password Reset Form</h1>
     <form method="post" action=".">
         {% csrf_token %}
         {{ form.as_p }}
 
-        <input type="submit" value="Submit">
+    <button class= "btn btn-primary" type="submit" value="Submit">Submit</button>
     </form>
+    </div>
 {% endblock %}
