--- a/rideshare/templates/registration/password_reset_form.html
+++ b/rideshare/templates/registration/password_reset_form.html
@@ -2,6 +2,10 @@
 {% block title %}
 Password Reset Form
 {% endblock title %}
+{% load staticfiles %}
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/register.css' %}">
+{% endblock css %}
 {% block content %}
     <div class="container">
     <h1>Password Reset Form</h1>
