--- a/rideshare/templates/view_car.html
+++ b/rideshare/templates/view_car.html
@@ -3,11 +3,13 @@
     View {{ car.car_name }}
 {% endblock title %}
 {% block content %}
+    <div class="container">
 <h1>{{ car.car_name }}</h1>
 <img width= "200px" src="{{ car.car_image.url }}">
 <h2>Model: {{ car.car_model }}</h2>
 <h2>Year: {{ car.car_year }}</h2>
-<a href=" {% url "edit_car" car.id %} ">Edit {{ car.car_name }}</a>
-<a href=" {% url "delete_car" car.id %} ">Delete {{ car.car_name }}</a>
+<a class="btn btn-primary" href=" {% url "edit_car" car.id %} ">Edit {{ car.car_name }}</a>
+<a class="btn btn-primary" href=" {% url "delete_car" car.id %} ">Delete {{ car.car_name }}</a>
+    </div>
 
 {% endblock content %}
