--- a/rideshare/templates/view_traveler.html
+++ b/rideshare/templates/view_traveler.html
@@ -3,11 +3,90 @@
 {% block title %}
     View Traveler: {{ traveler.username }}
 {% endblock title %}
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/profile.css' %}">
+{% endblock css %}
 {% block content %}
+
 <h1>Traveler {{ traveler.username }}</h1>
 <h2>Age: {{ traveler.age }}</h2>
 <h2>Background Checked? {{ traveler.background_checked }}</h2>
-<h2>Picture: <img width= "200px" src="{{ traveler.traveler_image.url }}"></h2>
+<img width= "200px" src="{{ traveler.traveler_image.url }}">
+    <div class="container">
+    <h1>Profile</h1>
+    <h4>Hello {{ user.first_name }}</h4>
+    {% if traveler.traveler_image %}
+    <img width= "200px" src="{{ traveler.traveler_image.url }}">
+    {% endif %}
+    <br>
+    <a class="btn btn-primary" href="{% url 'route_form' %}">Create New Route</a>
+    {% if routes.count > 0 %}
+    <h4>Your routes as a driver:</h4>
+           <div class="driver-route">
+<div class="input-group"> <span class="input-group-addon">Filter</span>
+
+    <input id="filter" type="text" class="form-control" placeholder="Type here...">
+</div>
+               <table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Origin</th>
+            <th>Destination</th>
+        </tr>
+    </thead>
+    <tbody class="searchable">
+
+{% for route in routes %}
+        <tr>
+            <td><a href="{% url 'view_route' route.id %}"> {{ route.trip_name }}</a></td>
+            <td>{{ route.start_city_state }}</td>
+            <td>{{ route.end_city_state }}</td>
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
+</div>
+
+{% endif %}
+{% if passenger_routes.count > 0 %}
+    <h4>Your routes as a passenger:</h4>
+           <div class="driver-route">
+<div class="input-group"> <span class="input-group-addon">Filter</span>
+
+    <input id="filter" type="text" class="form-control" placeholder="Type here...">
+</div>
+               <table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Origin</th>
+            <th>Destination</th>
+        </tr>
+    </thead>
+    <tbody class="searchable">
+
+{% for route in ride.passenger.all %}
+        <tr>
+            <td><a href="{% url 'view_route' route.id %}"> {{ route.trip_name }}</a></td>
+            <td>{{ route.start_city_state }}</td>
+            <td>{{ route.end_city_state }}</td>
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
+</div>
+
+{% endif %}
+    <a class="btn btn-primary" href="{% url 'car_form' %}">Add New Car</a>
+    {% if cars.count > 0 %}
+    <h4>Your Cars:</h4>
+    <ol>{% for car in cars %}
+    <li><a href="{% url 'view_car' car.id %}"> {{ car.car_name }}</a></li>
+    {% endfor %}</ol>
+{% endif %}
+
+</div>
 <h2>Driver for:</h2>
     <ul>{% for ride in routes %}
     <strong><p>Trip Name: <a href="{% url "view_route" ride.id %}"> {{ ride.trip_name }}</a></p></strong>
