--- a/rideshare/templates/home.html
+++ b/rideshare/templates/home.html
@@ -42,8 +42,8 @@
             <th>Name</th>
             <th>Origin</th>
             <th>Destination</th>
-            <th>Driver</th>
             <th>Start Date</th>
+            <th>Trip Driver</th>
         </tr>
     </thead>
     <tbody class="searchable">
