--- a/rideshare/templates/view_traveler.html
+++ b/rideshare/templates/view_traveler.html
@@ -29,6 +29,7 @@
             <th>Origin</th>
             <th>Destination</th>
             <th>Start Date</th>
+            <th>Trip Driver</th>
         </tr>
     </thead>
     <tbody class="searchable">
@@ -39,6 +40,7 @@
             <td>{{ route.start_city_state }}</td>
             <td>{{ route.end_city_state }}</td>
             <td>{{ route.start_date }}</td>
+            <td><a href=" {% url "view_traveler" route.trip_driver.id %}">{{ route.trip_driver }}</a></td>
         </tr>
     {% endfor %}
     </tbody>
