background no repeat

--- a/rideshare/static/css/home.css
+++ b/rideshare/static/css/home.css
@@ -1,4 +1,5 @@
 .jumbotron {
     background-image: url('http://www.coseats.com/img/background.jpg');
+    background-repeat: no-repeat;
     height: 700px;
 }
