--- a/rideshare/static/css/home.css
+++ b/rideshare/static/css/home.css
@@ -1,5 +1,6 @@
 .jumbotron {
     background-image: url('http://www.coseats.com/img/background.jpg');
     background-repeat: no-repeat;
+    background-size: cover;
     height: 700px;
 }
