fixed js hopefully

--- a/rideshare/templates/home.html
+++ b/rideshare/templates/home.html
@@ -5,24 +5,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
 {% endblock css %}
 {% block script %}
-    <script>
-    $(document).ready(function () {
 
-    (function ($) {
-
-        $('#filter').keyup(function () {
-
-            var rex = new RegExp($(this).val(), 'i');
-            $('.searchable tr').hide();
-            $('.searchable tr').filter(function () {
-                return rex.test($(this).text());
-            }).show();
-
-        })
-
-    }(jQuery));
-
-});</script>
 {% endblock script %}
 {% block content %}
 
@@ -60,4 +43,20 @@
     </tbody>
 </table>
 </div>
+<script>
+
+    (function ($) {
+
+        $('#filter').keyup(function () {
+
+            var rex = new RegExp($(this).val(), 'i');
+            $('.searchable tr').hide();
+            $('.searchable tr').filter(function () {
+                return rex.test($(this).text());
+            }).show();
+
+        })
+
+    }(jQuery));
+</script>
 {% endblock content %}
